Using new date/time picker for beschikbaarheidskalendar, hopefully fixed window overflow error

--- a/src/less/ui/buttons.less
+++ b/src/less/ui/buttons.less
@@ -58,6 +58,11 @@ md-button.mw-green {
     background: @mywheels-green !important;
 }
 
+button.mw-red,
+md-button.mw-red {
+    background: @mywheels-red !important;
+}
+
 .mywheels-btn-default,
 .mywheels-btn-default:hover,
 .mywheels-btn-normal,
